# bin_parsing_exercise

./: .gitignore  README.md  note.txt
Enigme/: README.md
Enigme/input_generator/src/: main.c
Enigme/solution/: CMakeLists.txt
Enigme/solution/src/: main.c
Exercice/: CMakeLists.txt  README.md  README2.md
Exercice/assets/: Rick Astley - Never Gonna Give You Up (Video)-dQw4w9WgXcQ.aup
Exercice/assets/Rick Astley - Never Gonna Give You Up (Video)-dQw4w9WgXcQ_data/e00/d00/: e0000153.au  e0000243.au  e00002da.au  e00002f7.au  e00003ab.au  e00003d4.au  e000046e.au  e0000776.au  e00007ed.au  e0000a29.au  e0000b18.au  e0000c95.au  e0000e0d.au  e0000f6c.au
Exercice/file_generator/: CMakeLists.txt
Exercice/file_generator/include/: decoding.h  generics.h
Exercice/file_generator/src/: main  main.c
Exercice/solution/: .gitignore  CMakeLists.txt
Exercice/solution/src/: main.c
